--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,5 +1,6 @@
 .profile__name {
-  max-width: 100%;
+  width: 100%;
+  max-width: calc(100vw - 120px - 150px - 60px - 48px - 24px - 18px - 16px);
   margin: 0;
   display: inline-block;
   font-weight: 500;
@@ -11,6 +12,7 @@
 
 @media (max-width: 650px) {
   .profile__name {
+    max-width: 100%;
     font-size: 27px;
     line-height: 1.22;
   }
